--- a/PrudishCamera/PrudishCamera/Info.plist
+++ b/PrudishCamera/PrudishCamera/Info.plist
@@ -18,6 +18,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>假正经需要访问您的相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>假正经需要访问您的相册</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
